<resources>
    <string name="app_name">Photo Surfer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="remember_credentials">Remember credentials?</string>
    <string name="login">Login</string>
    <string name="photos">Photos</string>
    <string name="details">Details</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Orci phasellus egestas tellus rutrum tellus.
        Cursus turpis massa tincidunt dui ut ornare lectus.
        Lorem ipsum dolor sit amet consectetur adipiscing elit.
        Enim lobortis scelerisque fermentum dui faucibus in ornare quam.
        Aliquet lectus proin nibh nisl condimentum id venenatis.
        Eget mauris pharetra et ultrices neque ornare. Vitae congue mauris rhoncus aenean vel.
        Massa tincidunt dui ut ornare lectus. Posuere sollicitudin aliquam ultrices sagittis orci.
        Convallis a cras semper auctor neque vitae tempus. Ut etiam sit amet nisl purus in mollis.
        Elementum nibh tellus molestie nunc non blandit. Leo in vitae turpis massa.
        Velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus.
        Sagittis nisl rhoncus mattis rhoncus urna. Diam phasellus vestibulum lorem sed.
        Aenean vel elit scelerisque mauris. Quis commodo odio aenean sed adipiscing diam donec adipiscing.</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="likes">Likes</string>
    <string name="trending">Trending</string>
    <string name="search">Search…</string>
    <string name="search_title" translatable="false">&#8981;</string>
    <string name="search_users">Search Users</string>
    <string name="collections">Collections</string>
    <plurals name="collections_plural">
        <item quantity="one">In one collection.</item>
        <item quantity="other">In %d collections.</item>
    </plurals>
    <string name="no_description">No description</string>
    <string name="add">Add</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="create_new_collection_with_photo">New Collection With This Photo</string>
    <string name="new_collection">New Collection</string>
    <string name="collection_description">Description</string>
    <string name="collection_private">Private</string>
    <string name="title">Title</string>
    <string name="error_collection_title">Collection Title is Missing!</string>
    <string name="edit_collection">Edit Collection</string>
    <string name="message_collection_edited">Collection Edited</string>
    <string name="playwaves">Playwaves</string>
    <string name="saved_photos">Saved Photos</string>
    <string name="on_unsplash_link" translatable="false">on Unsplash</string>
    <string name="msg_press_back_exit">Press back again to exit</string>
    <string name="msg_delete_photo">Delete the photo from your phone?</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="photo_info_size">Size: %1$dx%2$d </string>
    <string name="photo_info_color">Color:</string>
    <string name="photo_info_created">Created at: %1$s</string>
    <string name="error_playwave_no_pictures">Playwave doesn\'t have pictures. Add some first</string>
    <string name="error_playwave_no_song">Playwave has no song set</string>
    <string name="error_playwave_no_song_in_media">Song doesn\'t exist in your media library anymore</string>
    <string name="confirm">Confirm</string>
    <string name="search_songs">Search Songs</string>
    <string name="new_playwave">New Playwave</string>
    <string name="create_new_playwave_with_photo">New Playwave With Photo</string>
    <string name="update_playwave">Update Playwave</string>
</resources>
